--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-requests
-flask
-python-dotenv
-gunicorn
-azure-data-tables
-azure-storage-blob
-langchain
-langchain-openai
-langgraph
-xmltodict
-pydantic
+requests==2.32.3
+Flask==3.1.0
+python-dotenv==1.1.0
+gunicorn==23.0.0
+azure-data-tables==12.6.0
+azure-storage-blob==12.25.1
+langchain==0.3.21
+langchain-openai==0.3.11
+langgraph==0.3.21
+xmltodict==0.14.2
+pydantic==2.11.1
