--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-AZURE_OPENAI_API_KEY = ""
 OAIENDPOINT = ""
+AZURE_OPENAI_API_KEY = ""
 AZURE_OPENAI_ENDPOINT = ""
+AZURE_OPENAI_API_KEY_DALLE = ""
+AZURE_OPENAI_ENDPOINT_DALLE = ""
+AZURE_OPENAI_MODEL = ""
+AZURE_OPENAI_API_VERSION = ""
 connection_string = ""
 genbox_table_name = ""
 tomorrownews_table_name = ""
