--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ azure-data-tables==12.6.0
 azure-storage-blob==12.25.1
 langchain==0.3.21
 langchain-openai==0.3.11
+langchain-deepseek==0.1.3
 langgraph==0.3.21
 xmltodict==0.14.2
 pydantic==2.11.1
