Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,16 +8,16 @@ trigger:
 
 variables:
   # Azure Resource Manager connection created during pipeline creation
-  azureServiceConnectionId: '0b0cde5e-6228-4020-b589-28cd355f5c6f'
+  azureServiceConnectionId: 'f4a6089e-0f31-4818-a5e5-7851dc1bb263'
 
   # Web app name
-  webAppName: 'genbox'
+  webAppName: 'quizzify-me'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
 
   # Environment name
-  environmentName: 'genbox'
+  environmentName: 'quizzify-me'
 
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: $(System.DefaultWorkingDirectory)
@@ -79,7 +79,7 @@ stages:
             displayName: 'Use Python version'
 
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : SandBoxes'
+            displayName: 'Deploy Azure Web App : quizzify-me'
             inputs:
               azureSubscription: $(azureServiceConnectionId)
               appName: $(webAppName)
